Fixed overflow on code / pre tags

--- a/scss/partials/_global.scss
+++ b/scss/partials/_global.scss
@@ -761,6 +761,7 @@ code, tt {
 
 pre, code, tt {
 	font: 1rem Inconsolata, Monaco, monospace;
+	overflow: auto;
 }
 
 pre code {
